--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.1",
     "chart.js": "^3.9.1",
+    "ink-html": "^1.0.4",
+    "pdfmake": "^0.2.5",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-chartkick": "^1.1.0",
